Fixed footer with Kapsi ry logo (#15)
* Ignore /build/ directory
* Fixed footer with Kapsi ry logo
* Tweaks from feedback
* Fix footer link focus outline cutoff

--- a/_sass/_theme.scss
+++ b/_sass/_theme.scss
@@ -104,14 +104,33 @@ body {
 .footer {
   background: $headingColour;
   color: $captionColour;
+  position: fixed;
+  width: 100%;
+  bottom: 0;
   a {
+    @include fontsize(theta, all);
     color: $captionColour;
+    &:has(img) {
+      translate: 0 -.17em;
+      display: block;
+    }
+    &:focus,
     &:hover {
       color: $backgroundColour;
+      img {
+        opacity: 1;
+      }
+    }
+    img {
+      height: 2.5rem;
+      vertical-align: bottom;
+      opacity: .667;
+      transition: opacity .1s;
     }
   }
   .container {
     @include flex-wrap(wrap);
+    align-items: center;
   }
   .small {
     padding-top: 0;
@@ -139,6 +158,7 @@ body {
   @include flex(1, 0, auto);
   @include justify-content(flex-start);
   margin-bottom: 1.6rem;
+  padding-bottom: 5rem;
   @include breakpoint(break-1) {
     @include justify-content(center);
     @include flex-direction(row);
@@ -192,7 +212,6 @@ body {
 .list {
   list-style: none;
   &--nav {
-    overflow: hidden;
     margin-bottom: var(--listHeight, 0);
   }
   .item--post,
